2002-09-19  Christophe Fergeau  <teuf@users.sourceforge.net>
	
	* libgnomevfs/gnome-vfs-application-registry.c
	* libgnomevfs/gnome-vfs-application-registry.h: doh! My previous
	  commit added new API, fixing that

2002-09-19  Christophe Fergeau  <teuf@users.sourceforge.net>

	* libgnomevfs/gnome-vfs-application-registry.c
	* libgnomevfs/gnome-vfs-application-registry.h
	* libgnomevfs/gnome-vfs-configuration.c
	* libgnomevfs/gnome-vfs-configuration.h: added support for
	uses_gnomevfs in .application file so that apps can indicate they 
	can open all uris supported by gnomevfs
	* doc/mime-data-specification.txt: updated doc accordingly

2002-09-16  Alex Graveley  <alex@ximian.com>

	* modules/vfolder/Makefile.am (vfolder_DATA): Add
	preferences.vfolder-info-default.

	* modules/vfolder/preferences.vfolder-info-default.in: Create this
	defaults file, which is simply a folder extending
	preferences-all-users:.  This fixes the problem of not having a
	writedir when the .vfolder-info file doesn't exist, causing
	content changes to be written to the original system-global
	file, which is read-only.

2002-09-16  Alex Graveley  <alex@ximian.com>

	* modules/vfolder/vfolder-util.c (notify_children_changed_since):
	Impl, traverse directory children looking for ones which have
	changed since the last directory change, and emit CHANGED events.
	(monitor_timeout_cb): Look for iter->data, not iter itself since
	iter points to a copy of the monitor list.

2002-09-13  Ghee Teo <ghee.teo@sun.com>
	* Fixes #92132 in modules/http-method.c which leaks file descriptor
	  on a bad page, error 405.

2002-09-09  Jody Goldberg <jody@gnome.org>

	* libgnomevfs/gnome-vfs-job.c (gnome_vfs_job_destroy_notify_result) :
	  Add an entry to OP_XFER.

=======
2002-09-04  Ian McKellar  <yakk@yakk.net>

        * libgnomevfs/gnome-vfs-configuration.c:
        (gnome_vfs_configuration_init):
        Fixed bug #90035. If g_get_home_dir returns NULL then don't load