@@ -1,3 +1,9 @@
+2002-09-20  Arvind Samptur <arvind.samptur@wipro.com>
+	* modules/cde-desktop-method.c: Removing Comment field
+	from the desktop files. Fixes #88484
+	Redoing this since gnome-vfs-rewrite and gnome-2-0 branch
+	merge had knocked it off.
+
 2002-09-19  Christophe Fergeau  <teuf@users.sourceforge.net>
 	
 	* libgnomevfs/gnome-vfs-application-registry.c
